@@ -17,9 +17,8 @@ public class BpCoord implements Comparable<BpCoord> {
 		this.chr = chr;
 	}
 
-	@SuppressWarnings("deprecation")
 	public BpCoord(BpCoord o) {
-		this(new Long(o.bp), new Chromosome(o.chr));
+		this(Long.valueOf(o.bp), new Chromosome(o.chr));
 	}
 
 	public BpCoord clone() {
